--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
@@ -40,7 +40,7 @@
             </ul>
             <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item">
-                    @Html.Partial("_VersionSelector")
+                    @await Html.PartialAsync("_VersionSelector")
                 </li>
                 <li class="nav-item">
                     <a class="nav-link pr-0" href="/about">关于百科</a>
