--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Footer.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Footer.cshtml
@@ -3,7 +3,8 @@
         <div class="row small">
             <div class="col-lg-12">
                 <p class="float-right">
-                    此项目源代码托管在<a href="https://github.com/HumJ0218/HumphreyJ.Netcore.MKHX" target="_blank">GitHub</a>，欢迎共同完善！
+                    <a href="/about">关于百科</a>
+                    <span>此项目源代码托管在<a href="https://github.com/HumJ0218/HumphreyJ.Netcore.MKHX" target="_blank">GitHub</a>，欢迎共同完善！</span>
                 </p>
                 <p>
                     <a class="d-inline-block mr-3" href="https://www.humphreyj.com" target="_blank">©@(DateTime.Now.Year) HumphreyJ.com</a>
