--- a/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Shared/_Navbar.cshtml
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/article">攻略</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/gallery">资源库</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         工具
@@ -41,9 +44,6 @@
             <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item">
                     @await Html.PartialAsync("_VersionSelector")
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pr-0" href="/about">关于百科</a>
                 </li>
             </ul>
         </div>
